# Empty

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  autogen.py
Empty/: CMakeLists.txt  autogen.py  gen_vecs.py
Empty/src/Empty/: Context.cpp  Context.hpp
Empty/src/Empty/gl/: Buffer.h  Framebuffer.h  GLEnums.cpp  GLEnums.def  GLEnums.hpp  GLEnumsUtils.h  GLObject.h  Renderbuffer.h  Shader.h  ShaderProgram.cpp  ShaderProgram.hpp  Texture.h  Uniform.h  VertexArray.h  VertexStructure.h  defaultObjects.cpp
Empty/src/Empty/math/: funcs.cpp  funcs.h  mat.h  mathutils.cpp  mathutils.hpp  swizzling.inl  vec.h  vecref.inl
Empty/src/Empty/render/: Context.cpp  Context.hpp
Empty/src/Empty/render/gl/: Buffer.h  Framebuffer.h  GLEnums.cpp  GLEnums.def  GLEnums.hpp  GLEnumsUtils.h  GLObject.h  Renderbuffer.h  Shader.h  ShaderProgram.cpp  ShaderProgram.hpp  Texture.h  TextureView.h  Uniform.h  VertexArray.h  VertexStructure.h
Empty/src/Empty/utils/: EnumBitfield.h  macros.h  noncopyable.h  typeutils.h  utils.cpp  utils.hpp
Empty/src/glad/: glad.c  glad.h
docs/: _buffer_8h.html  _buffer_8h_source.html  _context_8cpp.html  _context_8cpp_source.html  _context_8hpp.html  _context_8hpp_source.html  _framebuffer_8h.html  _framebuffer_8h.js  _framebuffer_8h_source.html  _g_l_enums_8cpp.html  _g_l_enums_8cpp.js  _g_l_enums_8cpp_source.html  _g_l_enums_8hpp.html  _g_l_enums_8hpp.js  _g_l_enums_8hpp_source.html  _g_l_object_8h.html  _g_l_object_8h.js  _g_l_object_8h_source.html  _renderbuffer_8h.html  _renderbuffer_8h_source.html  _shader_8h.html  _shader_8h_source.html  _shader_program_8cpp.html  _shader_program_8cpp_source.html  _shader_program_8hpp.html  _shader_program_8hpp_source.html  _texture_8h.html  _texture_8h.js  _texture_8h_source.html  _uniform_8h.html  _uniform_8h.js  _uniform_8h_source.html  _vertex_array_8h.html  _vertex_array_8h_source.html  _vertex_structure_8h.html  _vertex_structure_8h.js  _vertex_structure_8h_source.html  annotated.html  annotated_dup.js  classes.html  (+226 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  (+105 more)
example/: CMakeLists.txt  Camera.h  Compute.glsl  DeferredFragment.glsl  DeferredVertex.glsl  Fragment.glsl  Mesh.h  Vertex.glsl  main.cpp
src/: main.cpp
src/Empty/glad/: glad.c  glad.h
src/Empty/math/: Matrix.hpp  funcs.h  mat.h  mathutils.cpp  mathutils.h  mathutils.hpp  vec.h
src/Empty/render/: Context.cpp  Context.hpp  FSQuadRenderContext.hpp  RenderContext.hpp
src/Empty/render/gl/: Buffer.h  GLEnums.cpp  GLEnums.def  GLEnums.hpp  GLObject.h  ShaderProgram.cpp  ShaderProgram.hpp  Texture.h  Uniform.h  VertexArray.h  VertexStructure.h
src/Empty/utils/: macros.h  utils.cpp  utils.hpp
src/glad/: glad.h
src/math/: Matrix.hpp  Vector.hpp
src/render/: FSQuadRenderContext.hpp  RenderContext.hpp
src/render/gl/: Buffer.h  GLEnums.cpp  GLEnums.def  GLEnums.hpp  GLObject.h  Shader.h  ShaderProgram.cpp  ShaderProgram.hpp  Texture.h  Texture.hpp  Uniform.h  VertexArray.h  VertexStructure.h
src/render/glObjects/: ShaderProgram.cpp  ShaderProgram.hpp  Texture.hpp
src/utils/: utils.cpp  utils.hpp
